--- a/image-sync/deploy/roles/catchall/tasks/main.yml
+++ b/image-sync/deploy/roles/catchall/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Ensure cron is available
-  tags: ["cloud-info", "sync"]
+  tags: ["cloud-info", "image-sync"]
   ansible.builtin.apt:
     name: cron
     state: present
@@ -12,7 +12,7 @@
   tags: ['never', 'docker']
 
 - name: Load site configuration
-  tags: ["cloud-info", "sync"]
+  tags: ["cloud-info", "image-sync"]
   ansible.builtin.include_vars:
     file: "{{ item }}"
     name: "{{ 'site_incl_vars_' ~ item | basename | splitext | first }}"
@@ -20,13 +20,13 @@
     - "{{ site_config_dir }}/*.yaml"
 
 - name: Set site configuration variable
-  tags: ["cloud-info", "sync"]
+  tags: ["cloud-info", "image-sync"]
   ansible.builtin.set_fact:
     sites: "{{ sites | default([]) + [lookup('vars', item)] }}"
   loop: "{{ query('varnames', '^site_incl_vars_(.*)$') }}"
 
 - name: EGI configuration directories
-  tags: ["cloud-info", "sync"]
+  tags: ["cloud-info", "image-sync"]
   ansible.builtin.file:
     path: "{{ item }}"
     state: directory
@@ -52,8 +52,8 @@
 
 
 - name: Image sync config
-  tags: ["sync"]
+  tags: ["image-sync"]
   ansible.builtin.include_tasks:
     file: sync.yml
     apply:
-      tags: "sync"
+      tags: "image-sync"
