--- a/image-sync/deploy/roles/catchall/tasks/main.yml
+++ b/image-sync/deploy/roles/catchall/tasks/main.yml
@@ -7,7 +7,10 @@
     update_cache: true
 
 - name: Install docker
-  ansible.builtin.include_tasks: docker.yml
+  ansible.builtin.include_tasks:
+    file: docker.yml
+    apply:
+      tags: "docker"
   # this is only executed if explicity requested
   tags: ['never', 'docker']
 
