--- a/image-sync/deploy/roles/catchall/tasks/sync.yml
+++ b/image-sync/deploy/roles/catchall/tasks/sync.yml
@@ -28,7 +28,8 @@
     job: >
       flock -n -w {{ image_sync_cron.timeout }} /var/lock/sync
       docker run --rm -v /etc/egi:/etc/egi:ro
-      -v {{ site_config_dir }}:/sites:ro
+      -v {{ site_config_dir }}:{{ site_config_mountpoint }}:ro
+      -v /var/cache/image_sync:/atrope-state
       {{ image_sync_image }} sites-sync
       --config-dir /etc/egi/image_sync >> /var/log/sync.log 2>&1
     cron_file: "egi-image-sync"
