--- a/deploy/roles/catchall/tasks/cloud-info.yml
+++ b/deploy/roles/catchall/tasks/cloud-info.yml
@@ -1,7 +1,7 @@
 ---
 - name: Cloud-info dirs
   ansible.builtin.file:
-    path: "{{ item }}"
+    path: "{{ dir }}"
     state: directory
     mode: "755"
     owner: "{{ egi_user }}"
@@ -10,6 +10,8 @@
     - /etc/egi/cloud-info
     - /var/lock/cloud-info
     - /var/log/cloud-info
+  loop_control:
+    loop_var: dir
 
 - name: Cloud-info config directory
   ansible.builtin.template:
