Ignore hadolint issue

--- a/image-sync/Dockerfile
+++ b/image-sync/Dockerfile
@@ -2,6 +2,7 @@ FROM python:3-slim AS build
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
+# hadolint ignore=DL3008
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
                build-essential gcc git \
