--- a/deploy/roles/catchall/tasks/sync.yml
+++ b/deploy/roles/catchall/tasks/sync.yml
@@ -7,13 +7,13 @@
     owner: "{{ egi_user }}"
     group: "{{ egi_group }}"
   loop:
-    - /etc/egi/image_sync
-    - /var/cache/image_sync
+    - /etc/egi/image-sync
+    - /var/cache/image-sync
 
 - name: sync configuration
   ansible.builtin.template:
     src: sync.conf.j2
-    dest: /etc/egi/image_sync/sync.conf
+    dest: /etc/egi/image-sync/sync.conf
     mode: "600"
     owner: "{{ egi_user }}"
     group: "{{ egi_group }}"
@@ -29,7 +29,7 @@
       flock -n -w {{ image_sync_cron.timeout }} /var/lock/sync
       docker run --rm -v /etc/egi:/etc/egi:ro
       -v {{ site_config_dir }}:{{ site_config_mountpoint }}:ro
-      -v /var/cache/image_sync:/atrope-state
+      -v /var/cache/image-sync:/atrope-state
       {{ image_sync_image }} image-sync
-      --config-dir /etc/egi/image_sync >> /var/log/sync.log 2>&1
+      --config-dir /etc/egi/image-sync >> /var/log/sync.log 2>&1
     cron_file: "egi-image-sync"
