May this get to normal

--- a/.github/workflows/deploy-cloud-info.yml
+++ b/.github/workflows/deploy-cloud-info.yml
@@ -13,6 +13,5 @@ jobs:
   deploy:
     uses: ./.github/workflows/deploy.yml
     with:
-      #dir: "deploy/cloud-info"
-      dir: "foo/cloud-info"
+      dir: "deploy/cloud-info"
       tags: "cloud-info,docker"
