Adjust the name of the secret

--- a/deploy/roles/catchall/defaults/main.yaml
+++ b/deploy/roles/catchall/defaults/main.yaml
@@ -6,7 +6,7 @@ ams_token: secret
 # AppDB details
 appdb_token: secret
 
-# check-in endpoint
+# checkin configuration
 checkin:
   token_endpoint: "https://aai.egi.eu/auth/realms/egi/protocol/openid-connect/token"
   client_id: id
