--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           curl -L https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64 > jq
           chmod +x jq
-          pip install simplejson yq git+https://github.com/tdviet/fedcloudclient.git
+          pip install simplejson yq fedcloudclient
       - name: Configure providers access
         env:
           REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
