--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           curl -L https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64 > jq
           chmod +x jq
-          pip install yq git+https://github.com/tdviet/fedcloudclient.git
+          pip install simplejson yq fedcloudclient
       - name: Configure providers access
         env:
           REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
@@ -170,7 +170,6 @@ jobs:
           retry_wait_seconds: 40
           command: >
             pushd "${{ inputs.dir }}" &&
-            which openstack &&
             openstack --os-cloud backend --os-token "$BACKEND_OS_TOKEN" object save fedcloud-catchall "${{ steps.terraform-vm-id.outputs.stdout }}" &&
             openstack --os-cloud backend --os-token "$BACKEND_OS_TOKEN" object delete fedcloud-catchall "${{ steps.terraform-vm-id.outputs.stdout }}"
       - name: Look for errors
