--- a/sites/ELKH-CLOUD.yaml
+++ b/sites/ELKH-CLOUD.yaml
@@ -5,3 +5,6 @@ vos:
 - name: ops
   auth:
     project_id: 6141a6ee30004094b4e9e53913a8e399 
+- name: vo.ai4publicpolicy.eu
+  auth:
+    project_id: e3a1a579887d4fc8b840a0d13188f0ea
