--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -63,7 +63,6 @@ vos:
   vo.europlanet-vespa.eu: "urn:mace:egi.eu:group:vo.europlanet-vespa.eu:role=vm_operator#aai.egi.eu"
   vo.eurosea.marine.ie: "urn:mace:egi.eu:group:vo.eurosea.marine.ie:role=member#aai.egi.eu"
   vo.geoss.eu: "urn:mace:egi.eu:group:vo.geoss.eu:role=vm_operator#aai.egi.eu"
-  vo.i-nergy.eu: "urn:mace:egi.eu:group:vo.i-nergy.eu:role=vm_operator#aai.egi.eu"
   vo.imagine-ai.eu: "urn:mace:egi.eu: group:vo.imagine-ai.eu:role=vm_operator#aai.egi.eu"
   vo.inactive-sarscov2.eu: "urn:mace:egi.eu:group:vo.inactive-sarscov2.eu:role=vm_operator#aai.egi.eu"
   vo.indigo-datacloud.eu: "urn:mace:egi.eu:group:vo.indigo-datacloud.eu:role=vm_operator#aai.egi.eu"
@@ -94,3 +93,4 @@ vos:
   worsica.vo.incd.pt: "urn:mace:egi.eu:group:worsica.vo.incd.pt:role=vm_operator#aai.egi.eu"
   ispravision.vo.egi.eu: "urn:mace:egi.eu:group:ispravision.vo.egi.eu:role=vm_operator#aai.egi.eu"
   vo.radiotracers4psma.eu: "urn:mace:egi.eu:group:vo.radiotracers4psma.eu:role=vm_operator#aai.egi.eu"
+  vo.ai4publicpolicy.eu: "urn:mace:egi.eu:group:vo.ai4publicpolicy.eu:role=vm_operator#aai.egi.eu"
