--- a/.github/workflows/deploy-image-sync.yml
+++ b/.github/workflows/deploy-image-sync.yml
@@ -1,5 +1,5 @@
 ---
-name: 'Deploy image sync'
+name: "Deploy image sync"
 
 on:
   push:
@@ -16,4 +16,3 @@ jobs:
       dir: "deploy/image-sync"
       tags: "docker,image-sync"
     secrets: inherit
-
