--- a/deploy/cloud-init.yaml
+++ b/deploy/cloud-init.yaml
@@ -46,7 +46,7 @@ write_files:
       ./deploy.sh "$OAUTH_TOKEN" "$COMMIT_SHA" "$FEDCLOUD_LOCKER_TOKEN" \
                   "$TAGS" "$SHORT_COMMIT_SHA" "$SLACK_WEBHOOK_URL"
     path: /var/lib/cloud/scripts/per-boot/deploy.sh
-    permissions: '0755'
+    permissions: "0755"
   - content: |
       #!/bin/sh
 
@@ -58,7 +58,7 @@ write_files:
       retry -t 10 -d 90 -- openstack --os-cloud backend object create \
             --name "$VM_ID" fedcloud-catchall "/var/tmp/egi/$VM_ID"
     path: /usr/local/bin/notify.sh
-    permissions: '0755'
+    permissions: "0755"
   - content: |
       [Unit]
       Description=Notify the github action
@@ -72,4 +72,4 @@ write_files:
   - content: "%CLOUDS_YAML%"
     encoding: base64
     path: /etc/openstack/clouds.yaml
-    permissions: '0644'
+    permissions: "0644"
