--- a/deploy/image-sync/extra-cloud-init.yaml
+++ b/deploy/image-sync/extra-cloud-init.yaml
@@ -1,7 +1,7 @@
 # Disk layout
 disk_setup:
   /dev/sdb:
-    table_type: 'mbr'
+    table_type: "mbr"
     layout: true
     overwrite: false
 fs_setup:
@@ -10,4 +10,4 @@ fs_setup:
     partition: any
     overwrite: false
 mounts:
-  - [ /dev/sdb, /var/cache/image-sync ]
+  - [/dev/sdb, /var/cache/image-sync]
