--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,3 +24,7 @@ jobs:
           # Disabling these two for the moment, should be enabled later
           VALIDATE_CHECKOV: false
           VALIDATE_PYTHON_PYLINT: false
+          # Black is good enough for us
+          VALIDATE_PYTHON_PYINK: false
+          # Disabling this file as it gets confused
+          FILTER_REGEX_EXCLUDE: "*.env.j2"
