enable ssh-oidc again

--- a/deploy/playbook.yaml
+++ b/deploy/playbook.yaml
@@ -7,7 +7,7 @@
         ssh_oidc_other_vos_name: cloud.egi.eu
         ssh_oidc_other_vos_role: auditor
       tags:
-        - never
+        - always
     - role: catchall
       vars:
         site_config_dir: ../sites/
