CESNET-MCCG2 got image-sync enabled and relatedegi-ops project (#378)
* CESNET-MCCG2 got image-sync enabled and relatedegi-ops project

This PR introduces:
 * image-sync enabled
 * ops project created (egi-ops)

* Update sites/CESNET-MCCG2.yaml

Co-authored-by: Enol Fernández <enol.fernandez@egi.eu>

* refactor: update project name after renaming

* re-trigger the pipeline

* refactor: make yaml lint happier

---------

Co-authored-by: Enol Fernández <enol.fernandez@egi.eu>

--- a/sites/CESNET-MCCG2.yaml
+++ b/sites/CESNET-MCCG2.yaml
@@ -1,4 +1,11 @@
 ---
 gocdb: CESNET-MCCG2
 endpoint: https://identity.brno.openstack.cloud.e-infra.cz/v3
-vos: []
+images:
+  sync: true
+  formats:
+    - raw
+vos:
+  - name: ops
+    auth:
+      project_id: 396c67a5f5bf4188b601927dbe51f386
