Seems that colossus doesn't like vmdk format

--- a/sites/BIFI.yaml
+++ b/sites/BIFI.yaml
@@ -3,6 +3,9 @@ gocdb: BIFI
 endpoint: https://colossus.cesar.unizar.es:5000/v3
 images:
   sync: true
+  formats:
+    - qcow2
+    - raw
 vos:
   - name: ops
     auth:
