--- a/sites/IISAS-FedCloud-cloud.yaml
+++ b/sites/IISAS-FedCloud-cloud.yaml
@@ -26,15 +26,18 @@ vos:
   - name: vo.access.egi.eu
     auth:
       project_id: 71dc9c3785cc4876bfb1a4bfc681e0f3
-  - name: vo.bd4nrg.eu
-    auth:
-      project_id: 74128e581e6941ad91c7fce06f14e6c8
-  - name: vo.oipub.com
-    auth:
-      project_id: e188494f39564812987a4ee5f58084a7
   - name: vo.ai4eosc.eu
     auth:
       project_id: 4d40037774784f22907d537070e85f42
+  - name: vo.bd4nrg.eu
+    auth:
+      project_id: 74128e581e6941ad91c7fce06f14e6c8
+  - name: vo.eosc-siesta.eu
+    auth:
+      project_id: 51e0cec60ffa49038f494c7e6ec6fb97
+  - name: vo.oipub.com
+    auth:
+      project_id: e188494f39564812987a4ee5f58084a7
   - name: vo.usegalaxy.eu
     auth:
       project_id: 7a23c4fa956a499c854eb215f3a95218
