--- a/sites/GRNET-OPENSTACK.yaml
+++ b/sites/GRNET-OPENSTACK.yaml
@@ -7,6 +7,9 @@ images:
     - qcow2
     - raw
 vos:
+  - name: hisea.c-scale.eu
+    auth:
+      project_id: 761d439913b34b90850ce5c44d0e96eb
   - name: ops
     auth:
       project_id: fd88c4b7bf9242fdbde17b484ccdb032
