--- a/deploy/roles/catchall/defaults/main.yaml
+++ b/deploy/roles/catchall/defaults/main.yaml
@@ -26,6 +26,12 @@ egi_group: "1999"
 # No site information as default
 sites: []
 
+# Empty swift configuration as default
+swift:
+  site:
+  vo:
+  container:
+
 cloud_info_cron:
   minute: "4,34"
   hour: "*"
