Add swift config for cloud-info

--- a/deploy/playbook.yaml
+++ b/deploy/playbook.yaml
@@ -11,3 +11,7 @@
     - role: catchall
       vars:
         site_config_dir: ../sites/
+        swift:
+          site: NCG-INGRID-PT
+          vo: vo.access.egi.eu
+          container: cloud-info
