--- a/cloud-info/requirements.txt
+++ b/cloud-info/requirements.txt
@@ -1,6 +1,6 @@
-# Cloud info version is 43cefc204b3e07211c6c37df2ee20eab845c3428
-# 43cefc204b3e07211c6c37df2ee20eab845c3428 includes json glue support
-git+https://github.com/EGI-Federation/cloud-info-provider.git@43cefc204b3e07211c6c37df2ee20eab845c3428
+# Cloud info version is 6fbbf1c24bd32c21d5b8de783d7face6c6c5987e
+# 6fbbf1c24bd32c21d5b8de783d7face6c6c5987e includes json glue support and fixes for it
+git+https://github.com/EGI-Federation/cloud-info-provider.git@6fbbf1c24bd32c21d5b8de783d7face6c6c5987e
 git+https://github.com/ARGOeu/argo-ams-library@devel
 python-glanceclient
 python-novaclient
