--- a/sites/CESNET-MCCG2.yaml
+++ b/sites/CESNET-MCCG2.yaml
@@ -18,3 +18,6 @@ vos:
   - name: demo.fedcloud.egi.eu
     auth:
       project_id: 9a830ea94e5944f3ab3da2e637e1bf74
+  - name: vo.eurobioimaging.eu
+    auth:
+      project_id: 29aba2b4d6c04bcfb268b161ad97a483
