Change on VO name for "vo.protocoast.eu" (#394)
* Change on VO name for "vo.protocoast.eu"

* Update vo-mappings.yaml

---------

Co-authored-by: Enol Fernández <enol.fernandez@egi.eu>

--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -76,6 +76,7 @@ vos:
   vo.phiri.eu: "urn:mace:egi.eu:group:vo.phiri.eu:role=vm_operator#aai.egi.eu"
   vo.pithia.eu: "urn:mace:egi.eu:group:vo.pithia.eu:role=vm_operator#aai.egi.eu"
   vo.projectescape.eu: "urn:mace:egi.eu:group:vo.projectescape.eu:role=vm_operator#aai.egi.eu"
+  vo.protocoast.eu: "urn:mace:egi.eu:group:vo.protocoast.eu:CP-cloud_operator:role=member#aai.egi.eu"
   vo.thepund.it: "urn:mace:egi.eu:group:vo.thepund.it:role=vm_operator#aai.egi.eu"
   vo.usegalaxy.eu: "urn:mace:egi.eu:group:vo.usegalaxy.eu:vm_operator:role=member#aai.egi.eu"
   worsica.vo.incd.pt: "urn:mace:egi.eu:group:worsica.vo.incd.pt:role=vm_operator#aai.egi.eu"
