Add project id supporting new VO vo.epos-eric.eu on fedcloud.srce.hr

--- a/sites/fedcloud.srce.hr.yaml
+++ b/sites/fedcloud.srce.hr.yaml
@@ -10,3 +10,6 @@ vos:
   - name: ops
     auth:
       project_id: c99c8b38569546008104fbaa12fe3aa9
+  - name: vo.epos-eric.eu
+    auth:
+      project_id: 44a3a5f9c2f44940acc98a8aee3875ba
