Update the list of supported VOs on the site.
This commit does a bit of housekeeping to keep the list of
supported VOs up to date with the catchall repository. In short
the following has been done.

- Remove fusion VO since they have ceased operations.
- Remove ENES VO since they have migrated to another site.
+ Added Protocoast.eu since we're supporting them.

--- a/sites/TR-FC1-ULAKBIM.yaml
+++ b/sites/TR-FC1-ULAKBIM.yaml
@@ -11,18 +11,12 @@ vos:
   - name: enmr.eu
     auth:
       project_id: 261e58163d204beb8d6ee82cca385771
-  - name: fusion
-    auth:
-      project_id: 0606cbf2743c4bbc8680227247f4d616
   - name: ops
     auth:
       project_id: 64abd71f8a1e42b6a3be1d1a172d96b6
   - name: vo.access.egi.eu
     auth:
       project_id: 2fa316a05d364de9b5a55ac78a45f8bf
-  - name: vo.enes.org
-    auth:
-      project_id: a59bd0a9ed754941962846c4a081d6ca
   - name: vo.nbis.se
     auth:
       project_id: b0159e11cb4b470eba90d113593e90c9
@@ -32,3 +26,6 @@ vos:
   - name: vo.usegalaxy.eu
     auth:
       project_id: 5eef96ac9de4417aa50395a12d793b48
+  - name: vo.protocoast.eu
+    auth:
+      project_id: 0739ad38c6f54d15afed73a509ede172
