Add certificates to the new venv

--- a/cloud-info/Dockerfile
+++ b/cloud-info/Dockerfile
@@ -33,7 +33,7 @@ RUN pip install --no-cache-dir .
 RUN python -m venv /cloud-info-json \
     && /cloud-info-json/bin/pip install --no-cache-dir \
          git+https://github.com/EGI-Federation/cloud-info-provider.git@641c3661fe55d14846573f88198f892ba0d03094 \
-    && cat /etc/grid-security/certificates/*.pem >> "$(python -m requests.certs)"
+    && cat /etc/grid-security/certificates/*.pem >> "$(/cloud-info-json/bin/python -m requests.certs)"
 
 # The actual image
 FROM python:3
