feat: Enable image sync on TR-FC1-ULAKBIM.
This commit enables image sync support on TR-FC1-ULAKBIM.
Currently only qcow images enabled due to storage constraints.
More formats can be enabled if necessary, or more storage space is acquired.

--- a/sites/TR-FC1-ULAKBIM.yaml
+++ b/sites/TR-FC1-ULAKBIM.yaml
@@ -1,6 +1,10 @@
 ---
 gocdb: TR-FC1-ULAKBIM
 endpoint: https://bulut.truba.gov.tr:5000/v3
+images:
+  sync: true
+  formats:
+    - qcow2
 vos:
   - name: dteam
     auth:
