--- a/sites/ELKH-CLOUD.yaml
+++ b/sites/ELKH-CLOUD.yaml
@@ -1,6 +1,11 @@
 ---
 gocdb: ELKH-CLOUD
 endpoint: https://sztaki.science-cloud.hu:5000/v3
+images:
+  sync: true
+  formats:
+    - qcow2
+    - raw
 vos:
   - name: ops
     auth:
