--- a/sites/CSTCLOUD-EGI.yaml
+++ b/sites/CSTCLOUD-EGI.yaml
@@ -1,6 +1,11 @@
 ---
 gocdb: CSTCLOUD-EGI
 endpoint: https://federation.cstcloud.cn:5000/v3
+images:
+  sync: true
+  formats:
+    - qcow2
+    - raw
 vos:
   - name: ops
     auth:
