--- a/sites/EODC.yaml
+++ b/sites/EODC.yaml
@@ -1,6 +1,11 @@
 ---
 gocdb: EODC
 endpoint: https://cloud.eodc.eu:5000/v3/
+images:
+  sync: true
+  formats:
+    - qcow2
+    - raw
 vos:
   - name: ops
     auth:
