--- a/image-sync/requirements.txt
+++ b/image-sync/requirements.txt
@@ -1,6 +1,6 @@
-# Atrope with openstacksdk:
-# https://github.com/EGI-Federation/atrope/commit/2c9b2fba74ed1c4e1f21bada335bf1823395971c
-git+https://github.com/EGI-Federation/atrope@2c9b2fba74ed1c4e1f21bada335bf1823395971c
+# Atrope with openstacksdk and multiple harbor projects
+# https://github.com/EGI-Federation/atrope/commit/5bb5e2aa53edd4b6cca1cce052d289bdba316e56
+git+https://github.com/EGI-Federation/atrope@5bb5e2aa53edd4b6cca1cce052d289bdba316e56
 httpx
 oslo.config
 PyYAML
