--- a/image-sync/Dockerfile
+++ b/image-sync/Dockerfile
@@ -27,8 +27,8 @@ RUN apt-get update \
     && apt-get install -y --no-install-recommends \
        gnupg2 qemu-utils curl \
     && curl -s https://dist.eugridpma.info/distribution/igtf/current/GPG-KEY-EUGridPMA-RPM-4 \
-	| apt-key add - \
-    && echo "deb https://repository.egi.eu/sw/production/cas/1/current egi-igtf core" > /etc/apt/sources.list.d/igtf.list \
+	| gpg --dearmor  -o /etc/apt/keyrings/eugridpma.gpg  \
+    && echo "deb [signed-by=/etc/apt/keyrings/eugridpma.gpg] https://repository.egi.eu/sw/production/cas/1/current egi-igtf core" > /etc/apt/sources.list.d/igtf.list \
     && apt-get update \
     && apt-get install -y ca-policy-egi-core \
     && rm -rf /var/lib/apt/lists/*
