--- a/image-sync/requirements.txt
+++ b/image-sync/requirements.txt
@@ -1,6 +1,6 @@
 # Atrope with openstacksdk and multiple harbor projects
-# https://github.com/EGI-Federation/atrope/commit/718d9840c0f4ca0c78bf543125c6999b2ee8ebf5
-git+https://github.com/EGI-Federation/atrope@718d9840c0f4ca0c78bf543125c6999b2ee8ebf5
+# https://github.com/EGI-Federation/atrope/tree/2.0.0
+git+https://github.com/EGI-Federation/atrope@2.0.0
 httpx
 oslo.config
 PyYAML
