Add image sync to CESNET

--- a/sites/CESNET-MCC.yaml
+++ b/sites/CESNET-MCC.yaml
@@ -1,6 +1,10 @@
 ---
 gocdb: CESNET-MCC
 endpoint: https://identity.cloud.muni.cz/v3
+images:
+  sync: true
+  formats:
+    - raw
 vos:
   - name: biomed
     auth:
