--- a/image-sync/requirements.txt
+++ b/image-sync/requirements.txt
@@ -1,6 +1,6 @@
-# Atrope with openstacksdk:
-# https://github.com/EGI-Federation/atrope/commit/2c9b2fba74ed1c4e1f21bada335bf1823395971c
-git+https://github.com/EGI-Federation/atrope@2c9b2fba74ed1c4e1f21bada335bf1823395971c
+# Atrope with openstacksdk and multiple harbor projects
+# https://github.com/EGI-Federation/atrope/tree/2.0.0
+git+https://github.com/EGI-Federation/atrope@2.0.0
 httpx
 oslo.config
 PyYAML
