--- a/cloud-info/requirements.txt
+++ b/cloud-info/requirements.txt
@@ -4,6 +4,7 @@ git+https://github.com/EGI-Federation/cloud-info-provider.git@88c3a14d1e11c1adf9
 python-glanceclient==4.10.0
 python-novaclient==18.11.0
 python-keystoneclient==5.7.0
+python-openstackclient==8.2.0
 keystoneauth1==5.12.0
 yq==3.4.3
 PyJWT==2.10.1
